# LiteXLoader

./: .gitignore  .gitmodules  BuildAll.bat  BuildJs.bat  BuildLua.bat  LXL_RefreshCDN.bat  MakeRelease.cmd  README.md  README_en.md  ReBuildAll.bat  ReBuildJs.bat  ReBuildLua.bat  Update.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: Build-Release.yml  ms.yml
AutoUpdate/: LXLAutoUpdate.sln  LXLAutoUpdate.vcxproj  LXLAutoUpdate.vcxproj.filters  LXLUpdate.cpp  dllmain.cpp
LiteXLoader/: .gitignore  LiteXLoader.sln
LiteXLoader.Js/: .gitignore  CMakeLists.txt
LiteXLoader.Lua/: CMakeLists.txt
LiteXLoader/BaseLib/: BaseLib.js  BaseLib.lua
LiteXLoader/LiteXLoader/: AutoUpdate.cpp  AutoUpdate.h  BindAPIs.cpp  CheckNotice.cpp  CheckUpdate.cpp  CheckUpdate.h  Configs.h  GlobalData.h  LiteXLoader.cpp  LiteXLoader.vcxproj  LiteXLoader.vcxproj.filters  Loader.cpp  Version.h  dllmain.cpp
LiteXLoader/LiteXLoader.Js/: LiteXLoader.Js.vcxproj  LiteXLoader.Js.vcxproj.filters
LiteXLoader/LiteXLoader.Lua/: LiteXLoader.Lua.vcxproj  LiteXLoader.Lua.vcxproj.filters
LiteXLoader/LiteXLoader/API/: APIHelp.cpp  APIHelp.h  BaseAPI.cpp  BaseAPI.h  BlockAPI.cpp  BlockAPI.h  BlockEntityAPI.cpp  BlockEntityAPI.h  CommandAPI.cpp  CommandAPI.h  ContainerAPI.cpp  ContainerAPI.h  DataAPI.cpp  DataAPI.h  DbAPI.cpp  DbAPI.h  DeviceAPI.cpp  DeviceAPI.h  DynamicNativeAPI.cpp  DynamicNativeAPI.h  EngineGlobalData.cpp  EngineGlobalData.h  EngineOwnData.h  EntityAPI.cpp  EntityAPI.h  EventAPI.cpp  EventAPI.h  FileSystemAPI.cpp  FileSystemAPI.h  GameSystemAPI.cpp  GameSystemAPI.h  GameUtilsAPI.cpp  GameUtilsAPI.h  GuiAPI.cpp  GuiAPI.h  ItemAPI.cpp  ItemAPI.h  LoaderHelper.cpp  LoaderHelper.h  LoggerAPI.cpp  (+23 more)
LiteXLoader/LiteXLoader/Engine/: EngineOwnData.h  GlobalShareData.cpp  GlobalShareData.h  LoaderHelper.cpp  LoaderHelper.h  LocalShareData.cpp  LocalShareData.h  MessageSystem.cpp  MessageSystem.h  PluginHotManage.cpp  RemoteCall.cpp  RemoteCall.h  TimeTaskSystem.cpp  TimeTaskSystem.h
LiteXLoader/LiteXLoader/Kernel/: Base.cpp  Base.h  Block.cpp  Block.h  BlockEntity.cpp  BlockEntity.h  Container.cpp  Container.h  Data.cpp  Data.h  Db.cpp  Db.h  Device.cpp  Device.h  DynamicNative.cpp  DynamicNative.h  Entity.cpp  Entity.h  Event.cpp  Event.h  Global.cpp  Global.h  Gui.cpp  Gui.h  Item.cpp  Item.h  NBT.cpp  NBT.h  Packet.cpp  Packet.h  Player.cpp  Player.h  Scoreboard.cpp  Scoreboard.h  Server.cpp  Server.h  SymbolHelper.cpp  SymbolHelper.h  System.cpp  System.h  (+5 more)
LiteXLoader/lib/: LiteLoader.lib  ScriptX-Lua.lib
LiteXLoader/src/: BindAPIs.cpp  Configs.h  LiteXLoader.cpp  Loader.cpp  Loader.h
LiteXLoader/src/API/: APIhelp.cpp  APIhelp.h  BaseAPI.cpp  BaseAPI.h  BlockAPI.cpp  BlockAPI.h  CommandAPI.cpp  CommandAPI.h  DbAPI.cpp  DbAPI.h  EngineGlobalData.cpp  EngineGlobalData.h  EngineOwnData.h  EntityAPI.cpp  EntityAPI.h  EventAPI.cpp  EventAPI.h  FileSystemAPI.cpp  FileSystemAPI.h  GuiAPI.cpp  GuiAPI.h  ItemAPI.cpp  ItemAPI.h  LoaderHelper.cpp  LoaderHelper.h  LoggerAPI.cpp  LoggerAPI.h  LxlAPI.cpp  LxlAPI.h  NbtAPI.cpp  NbtAPI.h  PlayerAPI.h  (+10 more)
RELEASE/: .gitignore
RELEASE/LiteXLoader/: config.ini
RELEASE/lib/: BaseLib.js  BaseLib.lua
ScriptX/: build.cmd
docs/: CNAME  README.md  _coverpage.md  index.html
docs/en/: Development.md  README.md  Usage.md
docs/zh-CN/: BaseApi.md  BlockApi.md  EntityApi.md  EventApi.md  FileSystemApi.md  GUIApi.md  Introduction.md  ItemApi.md  PlayerApi.md  README.md
docs/zh_CN/: Begining.md  DataApi.md  DbApi.md  Development.md  EventApi.md  GameApi.md  GuiApi.md  Maintance.md  NbtApi.md  README.md  ScriptApi.md  SystemApi.md  Usage.md
engine/V8/: .gitignore  v8_libbase.lib  v8_libplatform.lib
libs/LiteLoader/: LiteLoader.lib
src/: API.h  BindAPIs.cpp  ConfigHelp.h  Configs.h  LiteXLoader.cpp  LiteXRunner.cpp  Loader.cpp  ScriptBaseLib.cpp  dllmain.cpp  pch.h
src/API/: APIhelp.cpp  APIhelp.h  BaseAPI.cpp  BaseAPI.h  BlockAPI.cpp  BlockAPI.h  ConfigHelp.cpp  ConfigHelp.h  DbAPI.cpp  DbAPI.h  EngineGlobalData.cpp  EngineGlobalData.h  EngineOwnData.h  EntityAPI.cpp  EntityAPI.h  EventAPI.cpp  EventAPI.h  FileSystemAPI.cpp  FileSystemAPI.h  GuiAPI.cpp  GuiAPI.h  ItemAPI.cpp  ItemAPI.h  LogAPI.cpp  LogAPI.h  LoggerAPI.cpp  LoggerAPI.h  LxlAPI.cpp  LxlAPI.h  NetworkAPI.cpp  NetworkAPI.h  PlayerAPI.cpp  PlayerAPI.h  ServerAPI.cpp  ServerAPI.h  StaticClasses.cpp  StaticClasses.h  SymbolsHelper.h
src/Kernel/: Base.cpp  Base.h  Block.cpp  Block.h  ConfigHelp.cpp  ConfigHelp.h  Db.cpp  Db.h  Entity.cpp  Entity.h  Event.cpp  Global.h  Gui.cpp  Gui.h  Item.cpp  Item.h  Packet.cpp  Packet.h  Player.cpp  Player.h  Server.cpp  Server.h  System.cpp  System.h  ThirdParty.h
(+85 files in other folders)
